<?xml version="1.0"?>
<package>
  <name>rpirobot_control</name>
  <version>0.1.1</version>
  <description>RPiRobot controller configurations</description>

  <author email="frontwise@gmail.com">Roman Fedorenko</author>
  <maintainer email="frontwise@gmail.com">Roman Fedorenko</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/</url>
  <url type="bugtracker">https://github.com/</url>
  <url type="repository">https://github.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
