<?xml version="1.0"?>
<package>
  <name>rpirobot_gazebo</name>
  <version>0.1.1</version>
  <description>RPiRobot Simulator bringup, based on husky_gazebo</description>

  <author email="frontwise@gmail.com">Roman Fedorenko</author>
  <maintainer email="frontwise@gmail.com">Roman Fedorenko</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/</url>
  <url type="bugtracker">https://github.com/</url>
  <url type="repository">https://github.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>rpirobot_control</run_depend>
  <run_depend>rpirobot_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
